# anikevicius.lt

./: .gitignore  CNAME  Gemfile  LICENSE  Makefile  README.md  _config.yml  config.dev.toml  config.toml  index.html  index.html~  netlify.toml
.githooks/: precommit
_data/: projects.yml
_layouts/: default.html~
_my_categories/: programming.md
_my_tags/: github-pages.md
_posts/: 2017-07-08-My-first-post.md  2018-11-09-rust-git-prompt-1.md  2018-11-10-rust-git-prompt-2.md  2018-11-10-rust-git-prompt-3.md
_sass/: _logo.scss
blog/: index.html
content/blog/: makefiles_adding_prerequisites.md  sway-i3status-rs.md  unattended-updates.md  vilnius-recommendations.md
content/blog/bazel_01/: index.md
content/blog/git_prompt_01/: index.md
content/blog/git_prompt_02/: index.md
content/blog/git_prompt_03/: index.md
content/blog/git_prompt_04/: index.md
content/blog/git_prompt_05/: index.md
content/blog/makefiles_adding_prerequisites/: index.md
content/blog/makefiles_adding_prerequisites/src/: Makefile
content/blog/python_lazy_loading_and_namespace_pkgs/: index.md
content/blog/python_lazy_loading_and_namespace_pkgs/src/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
content/blog/python_lazy_loading_and_namespace_pkgs/src/extension_pkg/: BUILD.bazel
content/blog/python_lazy_loading_and_namespace_pkgs/src/pkg/: BUILD.bazel
content/blog/python_lazy_loading_and_namespace_pkgs/src/tests/: BUILD.bazel  test.py
content/projects/: _index.md
content/projects/git_prompt/: index.md
git_hooks/pre-commit/: zola_check
project/siulelis-lt/: index.md
sass/assets/: _icons.scss  _logo.scss  _minddust.scss  minddust.min.scss
templates/: 404.html  default.html  index.html  page.html  portfolio.html  rss.xml  section.html
templates/categories/: single.html
templates/tags/: list.html  single.html
todo/: project.html
